--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="container">
       <div class="image-container">
         <img
-          src="illustration-article.svg"
+          src="/illustration-article.svg"
           alt="illustration-article"
         />
       </div>
@@ -37,7 +37,7 @@
         <ul>
           <li class="avatar">
             <img
-              src="image-avatar.webp"
+              src="/image-avatar.webp"
               alt="profile of Greg"
             />
           </li>
