--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
     <main class="container">
       <div class="image-container">
         <img
-          src="blog-preview-fm/illustration-article.svg"
+          src="illustration-article.svg"
           alt="illustration-article"
         />
       </div>
@@ -37,7 +37,7 @@
         <ul>
           <li class="avatar">
             <img
-              src="blog-preview-fm/image-avatar.webp"
+              src="image-avatar.webp"
               alt="profile of Greg"
             />
           </li>
